{
    "name": "InputActionsPaddles",
    "maps": [
        {
            "name": "Default",
            "id": "fec934de-31ba-4dfb-87eb-15ddbad3e33f",
            "actions": [
                {
                    "name": "LeftPaddleMove",
                    "type": "Value",
                    "id": "ed6cb2da-ebd0-443e-90b6-b8e92c36ff96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightPaddleMove",
                    "type": "Value",
                    "id": "accd2e31-36fd-437d-8f23-0f7b0a0aa7b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "72629d74-cbc6-40c7-9929-5b2cf8662997",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "57f9dcab-2214-4267-b8d5-544281853606",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "bb320fdb-e27d-4eef-9413-a1a7fb8f1ab4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddleMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "4af390b9-8fbe-4204-b589-0a6c892798bf",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "bd5bd8a3-071c-4dad-a31e-2a10985d9497",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "5831d6ed-1f0b-432c-83f7-5393a3d8b6e8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddleMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}